--- a/src/main/resources/templates/itemPage.html
+++ b/src/main/resources/templates/itemPage.html
@@ -40,9 +40,11 @@
             </div>
 
             <div class="signup-badge">
-                <img src="/css/img/default-user.png" id="default-user-icon" alt="">
-                <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
-                <p id="user-name-header"><u> Login/Sign Up</u></p>
+                <a href="/loginPage" class="signup-badge-href">
+                    <img src="/css/img/default-user.png" id="default-user-icon" alt="">
+                    <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
+                    <p id="user-name-header"><u> Login/Sign Up</u></p>
+                </a>
             </div>
 
             <div class="cart-container">
