--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YEP! Store</title>
-    <meta name="_csrf" th:content="${_csrf.token}" />
-    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+
     <!-- Для роботи з динамічним css -->
     <!-- <link rel="stylesheet" href="../static/css/mainGallery.css">
     <link rel="stylesheet" href="../static/css/header.css"> -->
@@ -38,9 +37,11 @@
             </div>
 
             <div class="signup-badge">
-                <img src="/css/img/default-user.png" id="default-user-icon" alt="">
-                <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
-                <p id="user-name-header"><u> Login/Sign Up</u></p>
+                <a href="/loginPage" class="signup-badge-href">
+                    <img src="/css/img/default-user.png" id="default-user-icon" alt="">
+                    <!-- <img src="../static/css/img/default-user.png" id="default-user-icon" alt=""> -->
+                    <p id="user-name-header"><u> Login/Sign Up</u></p>
+                </a>
             </div>
 
             <div class="cart-container">
