--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
             <form id="userForm">
                 <p>E-mail</p>
                 <label for="email"></label>
-                <input type="text" id="email" name="email" value="testuser@gmail.com" required>
+                <input type="text" id="email" name="email" value="testuser1@gmail.com" required>
                 <div class="email-error-text" style="display: none;">Enter valid e-mail</div>
                 <div style="height: 20px;"></div>
                 <p>Password</p>
