--- a/src/main/resources/static/css/mainGallery.css
+++ b/src/main/resources/static/css/mainGallery.css
@@ -61,6 +61,10 @@
     color: #444;
 }
 
+.item-title-link {
+    color: #00a046;
+}
+
 .item-price {
     font-weight: bold;
 }
@@ -117,4 +121,8 @@
         /* 2 картки в ряд */
         max-width: calc(50% - 15px);
     }
+}
+
+.not-available-image {
+    filter: grayscale(30%);
 }
