--- a/src/main/resources/templates/mainGallery.html
+++ b/src/main/resources/templates/mainGallery.html
@@ -17,6 +17,8 @@
 
 <body>
     <header>
+        <div class="search-overlay"></div>
+        <div id="results-container"></div>
         <div class="header-wrapper">
             <div class="logo">
                 <a href="/mainpage">
@@ -33,7 +35,6 @@
                 <img src="/css/img/search-icon.png" alt="" id="search-icon">
                 <!-- <img src="../static/css/img/search-icon.png" alt="" id="search-icon"> -->
                 <button id="search-button">Search</button>
-
             </div>
 
             <div class="signup-badge">
