--- a/src/main/resources/static/css/sellerPage.css
+++ b/src/main/resources/static/css/sellerPage.css
@@ -334,16 +334,13 @@ form textarea:focus {
 
 #overlay {
     display: none;
-    /* Псевдоелемент для затемнення */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    /* затемнення */
     z-index: 1;
-    /* Під контейнером */
     transition: opacity 0.3s ease;
 }
 
@@ -649,7 +646,9 @@ img[alt="The image to crop"] {
 
 /* Кнопки підтвердження і скасування змін */
 .confirm-btn,
-.cancel-btn {
+.cancel-btn,
+.confirm-category-btn,
+.cancel-category-btn {
     padding: 5px 10px;
     font-size: 14px;
     border: none;
@@ -657,23 +656,28 @@ img[alt="The image to crop"] {
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-left: 10px;
+    height: 34px;
 }
 
-.confirm-btn {
+.confirm-btn,
+.confirm-category-btn {
     background-color: #28a745;
     color: #fff;
 }
 
-.confirm-btn:hover {
+.confirm-btn:hover,
+.confirm-category-btn:hover  {
     background-color: #218838;
 }
 
-.cancel-btn {
+.cancel-btn,
+.cancel-category-btn {
     background-color: #dc3545;
     color: #fff;
 }
 
-.cancel-btn:hover {
+.cancel-btn:hover,
+.cancel-category-btn:hover {
     background-color: #c82333;
 }
 
@@ -722,4 +726,28 @@ img[alt="The image to crop"] {
     width: 20px;
     height: auto;
     margin-right: 10px;
+}
+
+.category-container {
+    display: flex;
+}
+
+.edit-category-btn {
+    color: white;
+    background-color: #8962fe;
+    padding: 0px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s ease;
+    margin-left: 20px;
+    white-space: nowrap;
+    height: 34px;
+}
+
+.select-category-list {
+    margin: 0px 5px 10px 0px;
+    padding: 10px;
+    width: 170px;
 }
