--- a/src/main/resources/templates/itemPage.html
+++ b/src/main/resources/templates/itemPage.html
@@ -20,6 +20,8 @@
 <body>
 
     <header>
+        <div class="search-overlay"></div>
+        <div id="results-container"></div>
         <div class="header-wrapper">
             <div class="logo">
                 <a href="/mainpage">
