--- a/src/main/resources/static/css/itemPage.css
+++ b/src/main/resources/static/css/itemPage.css
@@ -40,9 +40,8 @@
 
 /* Блок з деталями */
 .product-details {
-    width: 50%;
     flex: 1;
-    padding: 40px;
+    padding: 20px;
     box-sizing: border-box;
     background-color: #ffffff;
     display: flex;
@@ -137,6 +136,7 @@ button:active {
 }
 
 .slider-container {
+    flex: 1;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -342,4 +342,18 @@ button:active {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+@media (max-width: 768px) {
+    /* Стиль для планшетів */
+    .product-container {
+        flex-direction: column;
+    }
+    #main-slider-wrapper {
+        height: 50vh;
+    }
+
+    .slider-container {
+        width: 100%;
+    }
 }
